--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/renatosantanao/study-cypress#readme",
   "dependencies": {
-    "cypress": "^3.6.0"
+    "cypress": "^3.6.0",
+    "cypress-xpath": "^1.4.0"
   }
 }
